--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ djangorestframework==3.16.1
 numpy==2.2.6
 opencv-python==4.12.0.88
 pillow==12.1.0
+pytz==2025.2
 scipy==1.16.3
 sqlparse==0.5.5
 tzdata==2025.3
