--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+numpy==1.26.4
+opencv-python-headless==4.9.0.80
+onnxruntime==1.23.2
+insightface==0.7.3
 albucore==0.0.24
 albumentations==2.0.8
 annotated-types==0.7.0
@@ -27,10 +31,7 @@ matplotlib==3.10.8
 ml_dtypes==0.5.4
 mpmath==1.3.0
 networkx==3.6.1
-numpy==2.2.6
 onnx==1.20.1
-onnxruntime==1.23.2
-opencv-python==4.12.0.88
 opencv-python-headless==4.13.0.90
 packaging==26.0
 pillow==12.1.0
